--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
                 Подбор, покупка, доставка, растаможка, ремонт, оформление по договору
             </p>
             <a class="button" href="#">КОНСУЛЬТАЦИЯ ЭКСПЕРТА</a>
-            <div class="header__social">
-                <a class="header__social-link" href="#">
-                    <img class="header__social-img" src="images/icon/instagram.svg" alt="instagram icon">
+            <div class="social header__social">
+                <a class="social-link" href="#">
+                    <img class="social-img" src="images/icon/instagram.svg" alt="instagram icon">
                 </a>
-                <a class="header__social-link" href="#">
-                    <img class="header__social-img" src="images/icon/telegram.svg" alt="telegram icon">
+                <a class="social-link" href="#">
+                    <img class="social-img" src="images/icon/telegram.svg" alt="telegram icon">
                 </a>
-                <a class="header__social-link" href="#">
-                    <img class="header__social-img" src="images/icon/whatsapp.svg" alt="whatsapp icon">
+                <a class="social-link" href="#">
+                    <img class="social-img" src="images/icon/whatsapp.svg" alt="whatsapp icon">
                 </a>
-                <a class="header__social-link" href="#">
-                    <img class="header__social-img" src="images/icon/facebook.svg" alt="facebook icon">
+                <a class="social-link" href="#">
+                    <img class="social-img" src="images/icon/facebook.svg" alt="facebook icon">
                 </a>
             </div>
             <img src="images/mustang.png" alt="mustang" class="header__images">
@@ -118,6 +118,167 @@
         </div>
     </div>
 </section>
+<section class="benefits">
+    <div class="container">
+        <div class="benefits__inner">
+            <img src="images/car.png" alt="car" class="benefits__images">
+            <div class="benefits__content">
+                <h2 class="title benefits__title">ПОЧЕМУ МЫ?</h2>
+                <ul class="benefits_list">
+                    <li class="benefits__item">
+                        <p class="benefits__item-num">650</p>
+                        <p class="benefits__item-title">успешно доставленных авто</p>
+                        <p class="benefits__item-text">большой опыт пригона автомобилей из США под ключ, все клиенты остались довольны на 100%</p>
+                    </li>
+                    <li class="benefits__item">
+                        <p class="benefits__item-num">5</p>
+                        <p class="benefits__item-title">лет на рынке Украины</p>
+                        <p class="benefits__item-text">Работаем по всей территории Украины, работаем по договору с клиентами</p>
+                    </li>
+                    <li class="benefits__item">
+                        <p class="benefits__item-num">100 %</p>
+                        <p class="benefits__item-title">доверия клиентов</p>
+                        <p class="benefits__item-text">Онлайн отчетность. Вы всегда в курсе статуса подбора вашего авто. Фото и видео отчет</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="carousel">
+    <div class="container">
+        <h2 class="title">
+            ПРИГНАННЫЕ НАМИ АВТО
+        </h2>
+        <div class="carousel__inner">
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/1.jpg" alt="">
+                    <h4 class="carousel__item-title">INFINITI QX50 2016 г.</h4>
+                    <p class="carousel__item-text">Экономия 4500 $</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/2.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018 г.</h4>
+                    <p class="carousel__item-text">Экономия 5500 $</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/3.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018 г.</h4>
+                    <p class="carousel__item-text">Экономия 5500 $</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/1.jpg" alt="">
+                    <h4 class="carousel__item-title">INFINITI QX50 2016 г.</h4>
+                    <p class="carousel__item-text">Экономия 4500 $</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/2.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018 г.</h4>
+                    <p class="carousel__item-text">Экономия 5500 $</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/3.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018 г.</h4>
+                    <p class="carousel__item-text">Экономия 5500 $</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/1.jpg" alt="">
+                    <h4 class="carousel__item-title"> INFINITI QX50 2016 г.</h4>
+                    <p class="carousel__item-text">Экономия 4500 $</p>
+                </div>
+            </div>
+            <div class="carousel__item">
+                <div class="carousel__item-box">
+                    <img class="carousel__item-img" src="images/carousel/2.jpg" alt="">
+                    <h4 class="carousel__item-title"> TESLA MODEL 3 2018 г.</h4>
+                    <p class="carousel__item-text">Экономия 5500 $</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+<section class="contacts">
+    <div class="container">
+        <div class="contacts__inner">
+            <div class="contacts__info">
+                <h2 class="title">КОНТАКТЫ</h2>
+                <ul class="contacts__list">
+                    <li class="contacts__item">
+                        <p class="contacts__item-title">Адрес</p>
+                        <p class="contacts__item-text">
+                            Киев, Подол<br>
+                            ул. Константиновская, д.71
+                        </p>
+                    </li>
+                    <li class="contacts__item">
+                        <p class="contacts__item-title">Время работы
+                        </p>
+                        <p class="contacts__item-text">Пн-Сб: с 9:00 до 19:00,<br>
+                            Вс: выходной
+                        </p>
+
+                    </li>
+                    <li class="contacts__item">
+                        <p class="contacts__item-title">Телефон</p>
+                        <p class="contacts__item-text">+38 (050) 555 66 77</p>
+                    </li>
+                </ul>
+            </div>
+            <form action="" class="contacts__form">
+                <h2 class="title contacts__title">ОСТАВИТЬ ЗАЯВКУ</h2>
+                <input class="contacts__input" type="text" placeholder="Как вас зовут?">
+                <input class="contacts__input" type="tel" placeholder="Ваш номер телефона">
+                <button class="contacts_btn button" type="submit">Отправить заявку</button>
+            </form>
+        </div>
+    </div>
+</section>
+
+
+<footer class="footer">
+    <div class="container">
+        <div class="footer__inner">
+            <a href="#" class="logo">
+                <img src="images/logo.svg" alt="logo" class="logo__img">
+            </a>
+
+            <div class="social">
+                <a class="social-link" href="#">
+                    <img class="social-img" src="images/icon/instagram.svg" alt="instagram icon">
+                </a>
+                <a class="social-link" href="#">
+                    <img class="social-img" src="images/icon/telegram.svg" alt="telegram icon">
+                </a>
+                <a class="social-link" href="#">
+                    <img class="social-img" src="images/icon/whatsapp.svg" alt="whatsapp icon">
+                </a>
+                <a class="social-link" href="#">
+                    <img class="social-img" src="images/icon/facebook.svg" alt="facebook icon">
+                </a>
+            </div>
+
+            <a class="footer__copy" href="#">
+                Политика конфиденциальности
+            </a>
+        </div>
+    </div>
+</footer>
+
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/slick.min.js"></script>
